finalizado tela principal

--- a/app/src/main/res/layout/fragment_main_meter.xml
+++ b/app/src/main/res/layout/fragment_main_meter.xml
@@ -36,13 +36,13 @@
     </ScrollView>
 
 
-
-
     <LinearLayout
         android:id="@+id/buttons"
         android:layout_width="0dp"
         android:layout_height="80dp"
+        android:layout_margin="8dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/background_type2"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +53,9 @@
             android:id="@+id/stopButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="8dp"
             android:layout_weight="1"
+            android:background="@drawable/background_type2"
             android:contentDescription="@string/main_meter_stop_label"
             android:scaleType="centerInside"
             android:src="@drawable/stop" />
@@ -62,7 +64,9 @@
             android:id="@+id/startAndPauseButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="8dp"
             android:layout_weight="1"
+            android:background="@drawable/background_type2"
             android:contentDescription="@string/main_meter_start_pause_label"
             android:scaleType="centerInside"
             android:src="@drawable/play" />
@@ -71,7 +75,9 @@
             android:id="@+id/lapButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="8dp"
             android:layout_weight="1"
+            android:background="@drawable/background_type2"
             android:contentDescription="@string/main_meter_lap_label"
             android:scaleType="centerInside"
             android:src="@drawable/stopwatch" />
