--- a/app/src/main/res/layout/fragment_lap_report.xml
+++ b/app/src/main/res/layout/fragment_lap_report.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="24dp"
+    android:background="@drawable/background_type1"
     android:minWidth="200dp"
     android:minHeight="100dp"
     tools:context=".LapReport">
@@ -26,6 +27,7 @@
             android:layout_height="wrap_content"
             android:text="@string/time_value_default"
             android:textColor="@color/black"
+            android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -38,6 +40,7 @@
             android:layout_height="wrap_content"
             android:text="@string/time_label"
             android:textColor="@color/black"
+            android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/lapTimeValue"
             app:layout_constraintEnd_toEndOf="parent"
@@ -62,6 +65,7 @@
             android:layout_height="wrap_content"
             android:text="@string/distance_value_default"
             android:textColor="@color/black"
+            android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -74,6 +78,7 @@
             android:layout_height="wrap_content"
             android:text="@string/distance_label"
             android:textColor="@color/black"
+            android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/lapDistanceValue"
             app:layout_constraintEnd_toEndOf="parent"
@@ -98,6 +103,7 @@
             android:layout_height="wrap_content"
             android:text="@string/avg_speed_value_default"
             android:textColor="@color/black"
+            android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -110,6 +116,7 @@
             android:layout_height="wrap_content"
             android:text="@string/avg_speed_label"
             android:textColor="@color/black"
+            android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/lapAVGSpeedValue"
             app:layout_constraintEnd_toEndOf="parent"
@@ -134,6 +141,7 @@
             android:layout_height="wrap_content"
             android:text="@string/lap_value_default"
             android:textColor="@color/black"
+            android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -146,6 +154,7 @@
             android:layout_height="wrap_content"
             android:text="@string/lap_label"
             android:textColor="@color/black"
+            android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/lapCount"
             app:layout_constraintEnd_toEndOf="parent"
